--- a/emb_ver01/res/values/strings.xml
+++ b/emb_ver01/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">emb_ver01</string>
+    <string name="app_name">Study!Warnning!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
